[project]
name = "roku"
version = "5.0"
description = "Client for the Roku media player"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Jeremy Carbaugh", email = "jeremy@jcarbaugh.com" },
]
requires-python = ">=3.10"
dependencies = [
    "requests<3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/jcarbaugh/python-roku"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "pytest",
    "pytest-mock",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
