[project]
name = "roku"
version = "5.0"
description = "Client for the Roku media player"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Jeremy Carbaugh", email = "jeremy@jcarbaugh.com" },
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32,<4",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9,<4"]
cli = ["click>=8,<9"]

[project.scripts]
roku = "roku.cli:cli"

[project.urls]
Homepage = "https://github.com/jcarbaugh/python-roku"

[dependency-groups]
dev = [
    "aiohttp>=3.9,<4",
    "black",
    "flake8",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "twine",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
